create registerModal, refactor AuthFormModal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,6 +20,8 @@
     "page": "Page"
   },
   "label": {
+    "firstName": "First name",
+    "lastName": "Last name",
     "fullname": "Full name",
     "username": "Username",
     "password": "Password",
