userInfo Page, refactor account pages (profile, orders, wishlist), refactor getLocalStorage, userSlice, modalSlice,... and <dont remember> ._.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,6 +27,8 @@
     "fullname": "Full name",
     "username": "Username",
     "password": "Password",
+    "phoneNumber": "Phone number",
+    "address": "Address",
     "gender": {
       "title": "Gender",
       "male": "Male",
